# tt-trinity-max-true

./: .pre-commit-config.yaml  .verible.lintr  .zenodo.json  BENCHMARKS.md  CHANGELOG.md  CLARA_TRACEABILITY.md  COMPETITORS.md  CONTRIBUTING.md  Cargo.toml  D2D_PROTOCOL.md  GF16_BFLOAT16_NMSE.md  LINEUP.md  README.md  SCIENTIFIC_IMPROVEMENT_PLAN.md  STATUS.md  TRIPLE_DECK_STATUS.md  info.yaml
.github/: ISSUES_SUMMARY.md  create_all_issues.sh  create_issues.sh
.github/issues/: 00_EPIC_2026.md  01_CL-01.md  01_CL01_AR_ML_Coprocessor.md  02_CL-02.md  02_CL02_Adversarial_Training.md  03_CL-03.md  03_CL03_Crypto_Audit.md  04_CL-04.md  04_CL04_Coq_Export.md  05_EN-01.md  05_EN01_Subthreshold_Clock.md  06_EN-02.md  06_EN02_Event_Driven_Compute.md  07_EN-03.md  07_EN03_Analog_Neuron.md  08_SN-01.md  08_SN01_Adaptive_LIF.md  09_SN-02.md  09_SN02_Lateral_Inhibition.md  10_SN-03.md  10_SN03_STDP_Learning.md  11_PUB-01.md  11_PUB01_Journal_Paper.md  12_PUB-02.md  12_PUB02_Conference_Paper.md  13_PUB-03.md  13_PUB03_PhD_Dissertation.md  14_OS-01.md  14_OS01_t27_Toolchain_v2.md  15_OS-02.md  15_OS02_CI_CD_Community.md  16_OS-03.md  16_OS03_Python_SDK.md  ISSUES_SUMMARY.md  create_issues.sh
.github/workflows/: fpga.yaml  no_star.yaml  sky130-nightly.yml  test.yaml  tri-test.yml
.trinity/seals/: boards_ArtyA7_Integration.json  boards_BoardArtyA7.json  boards_BoardFullXC7A100T.json  boards_BoardMinimalXC7A100T.json  boards_QMTech_A100T_Integration.json
conformance/d2d/: README.md  bad_crc.json  header_valid.json  multi_chip_ordering.json  timeout_retry.json  unsupported_opcode.json
crates/adiab-rc-witness/: Cargo.toml
crates/adiab-rc-witness/src/: lib.rs
crates/adiab-rc-witness/tests/: opcode.rs
crates/avs96-witness/: Cargo.toml
crates/avs96-witness/src/: lib.rs
crates/dfs-witness/: Cargo.toml
crates/dfs-witness/src/: lib.rs
crates/drowsy-ret-witness/: Cargo.toml
crates/drowsy-ret-witness/src/: lib.rs
crates/drowsy-ret-witness/tests/: opcode.rs
crates/fbb-active-witness/: Cargo.toml
crates/fbb-active-witness/src/: lib.rs
crates/fbb-active-witness/tests/: opcode.rs
crates/fbb-dyn-witness/: Cargo.toml
crates/fbb-dyn-witness/src/: lib.rs
crates/fbb-dyn-witness/tests/: opcode.rs
crates/int2-quant-witness/: Cargo.toml
crates/int2-quant-witness/src/: lib.rs
crates/lut-npu-witness/: Cargo.toml
crates/lut-npu-witness/src/: lib.rs
crates/lut-npu-witness/tests/: integration.rs
crates/moe-router-witness/: Cargo.toml
crates/moe-router-witness/src/: lib.rs
crates/node-shrink-witness/: Cargo.toml
crates/node-shrink-witness/src/: lib.rs
crates/nullor-witness/: Cargo.toml
crates/nullor-witness/src/: lib.rs
crates/rbb-witness/: Cargo.toml
crates/rbb-witness/src/: lib.rs
crates/rbb-witness/tests/: opcode.rs
crates/sparse-witness/: Cargo.toml
crates/sparse-witness/src/: lib.rs
crates/sparse-witness/tests/: opcode.rs
crates/sparsity-witness/: Cargo.toml
crates/sparsity-witness/src/: lib.rs
crates/spec-exit-witness/: Cargo.toml
crates/spec-exit-witness/src/: lib.rs
crates/stoch-skip-witness/: Cargo.toml
crates/stoch-skip-witness/src/: lib.rs
crates/subth-witness/: Cargo.toml
crates/subth-witness/src/: lib.rs
crates/subth-witness/tests/: integration.rs
crates/tri1-avs-witnesses/: Cargo.toml
crates/tri1-avs-witnesses/src/: lib.rs
crates/tri1-avs-witnesses/tests/: w_105_a_witness.rs
crates/tri1-lever-stack-witnesses/: Cargo.toml  README.md
crates/tri1-lever-stack-witnesses/src/: lib.rs
crates/tri1-lever-stack-witnesses/tests/: w_101_witnesses.rs
crates/tri1-lut-npu-witnesses/: Cargo.toml
crates/tri1-lut-npu-witnesses/src/: lib.rs
crates/tri1-lut-npu-witnesses/tests/: w_104_a_witness.rs
crates/tri1-tom-witnesses/: Cargo.toml
crates/tri1-tom-witnesses/src/: lib.rs
crates/tri1-tom-witnesses/tests/: w_103_a_witness.rs
crates/wl-boost-witness/: Cargo.toml
crates/wl-boost-witness/src/: lib.rs
crates/wl-boost-witness/tests/: opcode.rs
docs/: API.md  ARCHITECTURE.md  ARCHITECTURE_QUICK_WINS.md  CLARA_PROOF_MANIFEST.md  COMPETITIVE.md  GDS.md  HARDWARE_BRINGUP.md  L-DPC22-L-CGT.md  L-DPC23-S-VIEWER.md  L-DPC23-U-STA-RAZOR.md  L-DPC23-V-PHYS-ROM-AUDIT.md  L-DPC23-W-IGLA-FALSIFICATION.md  NOW.md  RELEASE_MANIFEST_TRINET_V1.md  SCIENTIFIC_IMPROVEMENT_PLAN.md  TEST_COVERAGE.md  TRI_NET_DARPA_CLARA_PROPOSAL.md  TROUBLESHOOTING.md  VERIFICATION_CLAIMS_MATRIX.md  info.md
docs/architecture/: MAX_TRUE_RATIONALE.md
docs/levers/: lever1_lut_pe.md
docs/nasa/: RVR-026.md  RVR-028.md
docs/specs/: TRIPLE_DECKER_FSM.md
examples/: README.md
scripts/: check_clara_traceability.sh  check_falsifiability.sh  check_trinet_specs.sh  formal_verify.sh  perf_sim.sh
sim/: tb_canonical.v
src/: alu9_decoder.v  asp_solver_mini.v  avs_controller_96.v  avs_reconf.v  bitnet_encoder.v  blake3_anchor.v  bpb_counter.v  bpb_lower_bound_guard.v  cassini_post.v  config.json  cortical_column.v  crc32_receipt.v  d2d_holo_mesh.v  datalog_engine_mini.v  explainability_unit.v  fp8_e4m3_quantizer.v  gf128_mul.v  gf12_mul.v  gf16_add.v  gf16_dot4_sparse.v  gf16_dot8.v  gf16_mesh_2x2_top.v  gf16_popcount.v  gf16_popcount16.v  gf20_mul.v  gf24_mul.v  gf256_mul.v  gf32_mul.v  gf32_to_fp32.v  gf4_mul.v  gf64_mul.v  gf8_mul.v  holo_lut_pe.sv  holo_lut_pe.v  holo_lut_pe_tb.sv  k3_alu.v  multi_tile_receipt.v  nca_entropy_monitor.v  phi_distance_oracle.v  phi_pll_div.v  (+24 more)
test/: Makefile  datalog_engine_mini_tb.v  k3_alu_tb.v  redteam_filter_tb.v  restraint_ctrl_tb.v  sim.sh  tb.v  tb_asp_solver_mini.v  tb_explainability_unit.v  tb_integration_cortex.v  tb_integration_d2d.v  tb_integration_mesh.v  tb_proof_trace_writer.v  tb_sat_solver_mini.v  tb_tri_token_accumulator.v  test.py
tests/vectors/: README.md  nmse_gf16_bf16.golden.json
tools/: check_no_star.sh
tools/tvm_vta/: README.md  vta_to_maxtrue.py
