[workspace]
members = [
    "crates/tri1-lever-stack-witnesses",
    "crates/tri1-tenet-witnesses",
    "crates/tri1-tom-witnesses",
    "crates/tri1-lut-npu-witnesses",
    "crates/lut-npu-witness",
    "crates/avs-witness",
    "crates/tri1-avs-witnesses",
    "crates/subth-witness",
    "crates/nullor-witness",
    "crates/holo-mux-witness",
    "crates/spec-exit-witness",
]
resolver = "2"
