[workspace]
members = [
    "crates/tri1-lever-stack-witnesses",
    "crates/tri1-tenet-witnesses",
    "crates/tri1-tom-witnesses",
    "crates/tri1-lut-npu-witnesses",
    "crates/lut-npu-witness",
    "crates/avs-witness",
    "crates/tri1-avs-witnesses",
    "crates/subth-witness",
    "crates/nullor-witness",
    "crates/holo-mux-witness",
    "crates/spec-exit-witness",
    "crates/dfs-witness",
    "crates/sparse-witness",
    "crates/stoch-round-witness",
    "crates/drowsy-ret-witness",
    "crates/sparsity-witness",
    "crates/fbb-active-witness",
    "crates/wl-boost-witness",
    "crates/adiab-rc-witness",
    "crates/node-shrink-witness",
    "crates/moe-router-witness",
    "crates/int2-quant-witness",
    "crates/fbb-dyn-witness",
    "crates/rbb-witness",
    "crates/stoch-skip-witness",
    "crates/avs96-witness",
]
resolver = "2"
