[package]
name = "drowsy-ret-witness"
version = "0.1.0"
edition = "2021"
authors = ["Vasilev Dmitrii <admin@t27.ai>"]
license = "Apache-2.0"
description = "Wave-43 Lane HH'' — DROWSY RETENTION SRAM witness for OP_DROWSY_RET=0xEC"

[lib]
path = "src/lib.rs"

[[test]]
name = "opcode"
path = "tests/opcode.rs"
