[package]
name = "fbb-dyn-witness"
version = "0.1.0"
edition = "2021"
authors = ["Vasilev Dmitrii <admin@t27.ai>"]
license = "Apache-2.0"
description = "Wave-48 Lane SS'' — DYNAMIC FORWARD BODY BIAS of Active Path witness for OP_FBB_ACTIVE=0xF2 (second slot in EXTENDED sacred bank 0xD0..0xFF). Dual of W47 RBB (0xF1) — same gamma^4 magnitude, opposite sign. Distinct from W44 static FBB (0xEE)."

[lib]
path = "src/lib.rs"

[[test]]
name = "opcode"
path = "tests/opcode.rs"
