[package]
name = "rbb-witness"
version = "0.1.0"
edition = "2021"
authors = ["Vasilev Dmitrii <admin@t27.ai>"]
license = "Apache-2.0"
description = "Wave-47 Lane QQ'' — REVERSE BODY BIAS witness for OP_RBB=0xF1 (first slot in EXTENDED sacred bank 0xD0..0xFF, R18 bank-extension ceremony)"

[lib]
path = "src/lib.rs"

[[test]]
name = "opcode"
path = "tests/opcode.rs"
